--- a/Config.properties
+++ b/Config.properties
@@ -11,7 +11,44 @@ amount=60
 Puchmissmore=10:06
 DeductionFrom2=Basic Salary
 Days =30 Days
-workSearch=George
+workSearch=George GG
 deprtSearch=Finance
 locsearch=Kollam
 MisstimeUp=6
+
+
+ShortTimeName=NewShortTimePolicy
+WorkLessThan=03:00
+DeductionTypeST=Fixed Amount
+AmountofSTP = 30
+Updateamount=40
+serachSTP=NewShortTimePolicy
+
+OccuranceType=Count
+EmpnameST=Arul 
+
+
+OvertimewpolicyName=OverTimePolicy
+MaximumOvertime=4
+Workmorethan=02:00
+AmountPerMini=200
+OverTimeCusName=New OverTime Policy
+OVTType=Salary Multiplayer
+MultiplayerAmount=100
+ComplimentaryName=Complimentary
+OfftypeTime=01:00
+UpdateOTPName= OverTimePolicyTest
+
+TimeOutpolicyName=TimeInOutPolicy
+LateMoreThan=01:00
+TIOPDeductiontype=Full Day
+TIOPDeductionfrom=Basic Salary
+TIOPdays=30 Days
+TIOsearch=TimeInOutPolicynew
+
+
+
+
+
+
+
